# resumeta

./: .gitignore  Dockerfile  README.md  alchemy.py  data.json  data.yml  db.py  local.db  main.py  pyproject.toml  requirements.txt  tables.sql  test.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
resumeta/: __init__.py  api.py  app.py  database.py  main.py
resumeta-frontend/frontend/: views.py
resumeta-frontend/resumeta/: urls.py
resumeta-server/: api.py  database.py  main.py
resumeta/database/: __init__.py  database.py  schema.py
resumeta/models/: resume.py
resumeta/routes/: activity.py  education.py  employment.py  resume.py
resumeta_api/: config.py  database.py  main.py  models.py
resumeta_api/educations/: models.py  router.py
resumeta_api/employments/: models.py  router.py
resumeta_api/resumes/: models.py  router.py
server/: __init__.py  app.py  database.py  main.py
server/models/: resume.py
server/routes/: __init__.py  activity.py  education.py  employment.py  resume.py
server/utils/: __init__.py  pydantic_encoder.py
